--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
 
     <!-- Favicon & Manifest -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="%PUBLIC_URL%/newLogo.webp" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/newLogo.webp" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Viewport & Theme -->
@@ -13,37 +13,37 @@
     <meta name="theme-color" content="#047857" />
 
     <!-- SEO Meta -->
-    <meta name="description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Swasthhyam Ayurveda Hospital." />
-    <meta name="keywords" content="Ayurveda, Ayurvedic hospital, holistic healing, book consultation, natural medicine, Swasthhyam" />
-    <meta name="author" content="Swasthhyam Ayurveda" />
+    <meta name="description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Asthyaaayu Ayurveda Hospital." />
+    <meta name="keywords" content="Ayurveda, Ayurvedic hospital, holistic healing, book consultation, natural medicine, Asthyaaayu" />
+    <meta name="author" content="Asthyaaayu Ayurveda" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://swasthhyam.com/" />
+    <link rel="canonical" href="https://asthyaaayu.in/" />
 
     <!-- Open Graph Meta -->
-    <meta property="og:title" content="Swasthhyam Ayurveda Hospital | Natural Healing & Wellness" />
-    <meta property="og:description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Swasthhyam Ayurveda Hospital." />
+    <meta property="og:title" content="Asthyaaayu Ayurveda Hospital" />
+    <meta property="og:description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Asthyaaayu Ayurveda Hospital." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://swasthhyam.com/" />
-    <meta property="og:image" content="https://swasthhyam.com/og-image.jpg" />
-    <meta property="og:site_name" content="Swasthhyam Ayurveda" />
+    <meta property="og:url" content="https://asthyaaayu.in" />
+    <meta property="og:image" content="https://asthyaaayu.in/og-image.jpg" />
+    <meta property="og:site_name" content="Asthyaaayu Ayurveda" />
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Swasthhyam Ayurveda Hospital | Natural Healing & Wellness" />
-    <meta name="twitter:description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Swasthhyam Ayurveda Hospital." />
-    <meta name="twitter:image" content="https://swasthhyam.com/og-image.jpg" />
+    <meta name="twitter:title" content="Asthyaaayu Ayurveda Hospital" />
+    <meta name="twitter:description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Asthyaaayu Ayurveda Hospital." />
+    <meta name="twitter:image" content="https://asthyaaayu.in/og-image.jpg" />
 
     <!-- Structured Data (Schema.org) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "MedicalOrganization",
-      "name": "Swasthhyam Ayurveda Hospital",
-      "url": "https://swasthhyam.com",
-      "logo": "https://swasthhyam.com/logo192.png",
+      "name": "Asthyaaayu Ayurveda Hospital",
+      "url": "https://asthyaaayu.in",
+      "logo": "https://asthyaaayu.in/newLogo.webp",
       "sameAs": [
-        "https://www.facebook.com/swasthhyam",
-        "https://www.instagram.com/swasthhyam"
+        "https://www.facebook.com/Asthyaaayu",
+        "https://www.instagram.com/Asthyaaayu"
       ],
       "contactPoint": {
         "@type": "ContactPoint",
@@ -54,7 +54,7 @@
       },
       "address": {
         "@type": "PostalAddress",
-        "addressLocality": "Kerala",
+        "addressLocality": "Pune",
         "addressRegion": "IN",
         "addressCountry": "India"
       }
@@ -62,7 +62,7 @@
     </script>
 
     <!-- Page Title -->
-    <title>Swasthhyam Ayurveda Hospital | Natural Healing & Wellness</title>
+    <title>Asthyaaayu Ayurveda Hospital</title>
   </head>
 
   <body>
