--- a/public/index.html
+++ b/public/index.html
@@ -13,24 +13,24 @@
     <meta name="theme-color" content="#047857" />
 
     <!-- SEO Meta -->
-    <meta name="description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Asthyaaayu Ayurveda Hospital." />
-    <meta name="keywords" content="Ayurveda, Ayurvedic hospital, holistic healing, book consultation, natural medicine, Asthyaaayu" />
-    <meta name="author" content="Asthyaaayu Ayurveda" />
+    <meta name="description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Swasthhyam Ayurveda Hospital." />
+    <meta name="keywords" content="Ayurveda, Ayurvedic hospital, holistic healing, book consultation, natural medicine, Swasthhyam" />
+    <meta name="author" content="Swasthhyam Ayurveda" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://asthyaaayu.in/" />
 
     <!-- Open Graph Meta -->
-    <meta property="og:title" content="Asthyaaayu Ayurveda Hospital" />
-    <meta property="og:description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Asthyaaayu Ayurveda Hospital." />
+    <meta property="og:title" content="Swasthhyam Ayurveda Hospital" />
+    <meta property="og:description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Swasthhyam Ayurveda Hospital." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://asthyaaayu.in" />
     <meta property="og:image" content="https://asthyaaayu.in/og-image.jpg" />
-    <meta property="og:site_name" content="Asthyaaayu Ayurveda" />
+    <meta property="og:site_name" content="Swasthhyam Ayurveda" />
 
     <!-- Twitter Card Meta -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Asthyaaayu Ayurveda Hospital" />
-    <meta name="twitter:description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Asthyaaayu Ayurveda Hospital." />
+    <meta name="twitter:title" content="Swasthhyam Ayurveda Hospital" />
+    <meta name="twitter:description" content="Book expert Ayurvedic consultations, explore natural treatments, and experience holistic healing at Swasthhyam Ayurveda Hospital." />
     <meta name="twitter:image" content="https://asthyaaayu.in/og-image.jpg" />
 
     <!-- Structured Data (Schema.org) -->
@@ -38,16 +38,16 @@
     {
       "@context": "https://schema.org",
       "@type": "MedicalOrganization",
-      "name": "Asthyaaayu Ayurveda Hospital",
+      "name": "Swasthhyam Ayurveda Hospital",
       "url": "https://asthyaaayu.in",
       "logo": "https://asthyaaayu.in/newLogo.webp",
       "sameAs": [
-        "https://www.facebook.com/Asthyaaayu",
-        "https://www.instagram.com/Asthyaaayu"
+        "https://www.facebook.com/profile.php?id=61576353255566",
+        "https://www.instagram.com/swasthhyam_knee_spine_expert/"
       ],
       "contactPoint": {
         "@type": "ContactPoint",
-        "telephone": "+91-9876543210",
+        "telephone": "+91 91469 57655",
         "contactType": "Customer Service",
         "areaServed": "IN",
         "availableLanguage": ["English", "Hindi"]
@@ -62,7 +62,7 @@
     </script>
 
     <!-- Page Title -->
-    <title>Asthyaaayu Ayurveda Hospital</title>
+    <title>Swasthhyam Ayurveda Hospital</title>
   </head>
 
   <body>
