--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
+    <meta name="facebook-domain-verification" content="klzdrj2cgt2ru0qbckpncbkori8wax" />
 
     <!-- Favicon & Manifest -->
     <link rel="icon" href="%PUBLIC_URL%/newLogo.webp" />
