--- a/public/index.html
+++ b/public/index.html
@@ -62,17 +62,35 @@
     }
     </script>
 
+    <!-- Google Tag Manager -->
+    <script>
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-5HSTPVJX');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <!-- Page Title -->
     <title>Swasthhyam Ayurveda Hospital</title>
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5HSTPVJX"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <noscript>
       <div style="text-align:center; padding:2rem; color:#333; background:#ffefef">
         <strong>JavaScript is disabled in your browser.</strong><br />
         For the full experience of this site, please enable JavaScript.
       </div>
     </noscript>
+    
     <div id="root"></div>
   </body>
 </html>
